# ofac-sanctioned-digital-currency-addresses

./: .gitignore  README.md  create-s3-objects.py  create_s3_objects.py  create_s3_objects_test.py  generate-address-list.py  ofac_scraper.py  pyproject.toml  sanctioned_addresses_BNB.json  sanctioned_addresses_DASH.txt  sanctioned_addresses_ETH.json  sanctioned_addresses_ETH.txt  sanctioned_addresses_SOL.json  sanctioned_addresses_SOL.txt  sanctioned_addresses_TRX.json  sanctioned_addresses_TRX.txt  sanctioned_addresses_USDT.json  sanctioned_addresses_USDT.txt  sanctioned_addresses_XBT.json  sanctioned_addresses_XBT.txt  sdn_advanced.xml.bz2  sdn_advanced_checksum.txt  update_s3_objects.py  update_s3_objects_test.py
.github/workflows/: generate-lists.yml  test-python.yml
